--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -376,7 +376,8 @@
       url: "/custom-helm-uploads"
     - title: Helm environment promotion
       url: "/helm-environment-promotion"
-
+    - title: Helm 2 Support
+      url: "/helm2-support"
 
 - title: Integrations
   url: "/integrations"
@@ -451,6 +452,8 @@
       url: "/invite-your-team-member"
     - title: User settings
       url: "/user-settings"
+    - title: Pipeline settings
+      url: "/pipeline-settings"
     - title: Enterprise Account Management
       url: "/ent-account-mng"
     - title: Single Sign-On
